--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10,6 +10,10 @@ body{
     font-family: 'Roboto Condensed', sans-serif;
 }
 
+.row{
+    max-width:100%;
+    margin:0px;
+}
 
 .main-wapper{
     max-width: 1170px;
